--- a/20230425/css/style.css
+++ b/20230425/css/style.css
@@ -26,14 +26,14 @@ ul {
   text-align: center;
   line-height: 300px;
   margin-bottom: 100px;
-    
-@media screen and (max-width: 767px;){
-    .wrap{
-        display: block;
-    }
+}
+@media screen and (max-width: 767px) {
+  .wrap {
+    display: block;
+  }
 
-    .wrap div {
-        width: 100%;
-        margin-bottom: 20px;
-    }
+  .wrap div {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
