--- a/work2_morio_01/CSS/style.css
+++ b/work2_morio_01/CSS/style.css
@@ -1,30 +1,5 @@
 @charset "utf-8";
 
-/* work1-1 */
-div {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  max-width: 960px;
-  align-items: center;
-}
-
-.wrap-blue div {
-  width: 30%;
-  height: 300px;
-  background: blue;
-  margin-bottom: 20px;
-}
-
-/* work1-2 */
-.wrap-red div {
-  width: 30%;
-  height: 300px;
-  background: red;
-  margin-bottom: 20px;
-}
-
 /* work1-3 */
 
 html,
@@ -61,13 +36,45 @@ img {
   border: none;
 }
 /* cssリセット終了 */
+
+/* work1-1 */
+.wrap-blue,
+.wrap-red {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 960px;
+  align-items: center;
+}
+
+.wrap-blue div {
+  width: 31.25%;
+  height: 300px;
+  background: blue;
+  margin-bottom: 20px;
+}
+
+/* work1-2 */
+.wrap-red div {
+  width: 31.25%;
+  height: 300px;
+  background: red;
+  margin-bottom: 20px;
+}
+
 .wrap-menu {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 960px;
+  align-items: center;
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
 h1 {
-  margin-left: 100px;
+  margin-left: 10px;
 }
 
 ul {
@@ -78,6 +85,7 @@ li {
   padding: 5px 20px;
   border-right: 1px solid;
 }
+
 li:last-child {
   border: 0px;
 }
@@ -87,25 +95,25 @@ li:last-child {
   .wrap-menu {
     display: block;
   }
+
   h1 {
     margin-left: 10px;
   }
+
   ul {
     width: 100%;
-    justify-content: first;
     flex-direction: column;
     margin-top: 10px;
   }
 
   li {
-    border-bottom: 1px solid;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin: 0 10px;
+    padding: 10px 20px;
     border-right: none;
-    margin-left: 10px;
-    margin-right: 10px;
+    border-bottom: 1px solid #000;
   }
+
   li:last-child {
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #000;
   }
 }
