--- a/portfolio_morio_coding/css/common.css
+++ b/portfolio_morio_coding/css/common.css
@@ -38,8 +38,19 @@ body {
 /* リセットcss */
 
 /* header */
+.header {
+  position: fixed; /* ヘッダーを固定する */
+  top: 0; /* 上部から配置の基準位置を決める */
+  left: 0; /* 左から配置の基準位置を決める */
+  width: 100%; /* ヘッダーの横幅を指定する */
+  height: 35px; /* ヘッダーの高さを指定する */
+  padding: 10px; /* ヘッダーの余白を指定する(上下左右) */
+  color: #000000; /* フォントの色を指定する */
+  z-index: 2;
+}
 .header_logo {
   width: 120px;
+  background-color: transparent;
 }
 .header_inner {
   display: flex;
@@ -52,18 +63,33 @@ body {
 .pc_nav ul {
   display: flex;
   width: 670px;
+  background-color: transparent;
 }
 .pc_nav ul li {
   margin-right: 35px;
+  background-color: transparent;
 }
 .fv {
   height: 690px;
   display: table-cell;
   vertical-align: middle;
 }
+
 .sp_nav,
 .sp_btn {
   display: none;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* copyright */
@@ -73,4 +99,11 @@ body {
   padding-top: 90px;
   padding-bottom: 90px;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 767px) {
+  .copyright {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
