--- a/portfolio_morio_coding/thanks/css/style.css
+++ b/portfolio_morio_coding/thanks/css/style.css
@@ -11,7 +11,7 @@
   left: 25px;
 }
 .text_inner p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.6;
   margin-bottom: 30px;
 }
@@ -19,8 +19,8 @@
   max-width: 1000px;
   margin: 0 auto;
   margin-top: 100px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 a.btn_home {
   display: block;
@@ -28,7 +28,7 @@ a.btn_home {
   text-decoration: none;
   width: 50px;
   margin: 0 0 0 auto;
-  padding: 1rem 4rem;
+  padding: 10px 50px;
   font-weight: bold;
   background: #232323;
   color: #f2eee7;
@@ -40,4 +40,116 @@ a.btn_home {
 a.btn_home:hover {
   color: #232323;
   background: #fffe3e;
+}
+@media screen and (max-width: 900px) {
+  /* jugyou */
+  .pc_nav {
+    display: none;
+  }
+  .sp_btn {
+    display: block;
+    position: absolute;
+    top: 50px;
+    right: 25px;
+    height: 23px;
+    cursor: pointer;
+    z-index: 2;
+    /* 重なり順を指定 */
+  }
+  .sp_btn span {
+    display: block;
+    position: relative;
+    top: 10px;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #232323;
+    transition: 0.3s; /* transitionは状態が変化するまでに何秒かけるか*/
+    /* ハンバーガーメニューの切り替え時にtransitionを入れることで0.3かけて切り替わる */
+    /* 擬似要素にも同様に追加する */
+  }
+  /* 擬似要素 */
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 33px;
+    height: 3px;
+    border-radius: 2px;
+    background: #232323;
+    transition: 0.3s;
+  }
+  .sp_btn span::before {
+    bottom: 10px;
+    /* 三本線の下の線 */
+  }
+  .sp_btn span::after {
+    top: 10px;
+    /* 三本線の上の線　 */
+  }
+  /* ハンバーガーメニュー閉じる */
+  .sp_btn.open span {
+    background: transparent;
+    /* ハンバーガーメニューの真ん中の線を見えなくする */
+  }
+  .sp_btn.open span::before {
+    bottom: 0;
+    /* 先ほどずらした三本線の上下の線を元に戻す */
+    transform: rotate(45deg);
+    /* 回転させるプロパティ。45度回転 */
+  }
+  .sp_btn.open span::after {
+    top: 0;
+    transform: rotate(135deg);
+    /* 下の線も戻してから次は135度回転 */
+  }
+
+  /* ハンバーガーメニュー */
+  .sp_nav {
+    position: absolute; /*  好きな位置に配置*/
+    top: 0;
+    left: 0; /*  topとleftを０で右上に指定*/
+    width: 100%; /* 横幅100％ */
+    height: 100vh; /* デバイスの高さ100％を100vhとする*/
+    background: rgba(0, 0, 0, 0.8);
+    /* rgbaアルファを入れることによって透過さえられる。0.8だから80%薄くしている */
+    z-index: 1;
+    /* レイヤーの重なり順を指定 */
+  }
+  .sp_nav ul {
+    display: flex;
+    flex-direction: column; /* flex-direction=どの方向に並べますか */
+    /* columnにすることによって縦に並ぶ */
+    /* flex-direction: columnにすることによって下のjustifyやalineの上下左右が入れ替わる */
+    justify-content: center; /* 上下を真ん中 */
+    align-items: center; /* 左右を真ん中 */
+    height: 100%; /* 高さ100% */
+  }
+  .sp_nav ul li {
+    padding: 20px 0;
+    color: #232323;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Noto Sans CJK JP;
+    text-align: center;
+  }
+  .lead_body {
+    font-size: 60px;
+  }
+  .about_heading {
+    font-size: 30px;
+  }
+  .lead_foot {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .text_inner p {
+    font-size: 14px;
+    line-height: 1.57;
+  }
+  a.btn_home {
+    padding: 10px 40px;
+  }
 }
