--- a/portfolio_morio_coding/works/css/style.css
+++ b/portfolio_morio_coding/works/css/style.css
@@ -11,7 +11,8 @@
   margin-top: 60px;
   margin-bottom: 110px;
 }
-.ttl_wrap {
+.ttl_wrap,
+.ttl_wrap_w {
   display: flex;
   align-items: center;
   margin: 0 auto;
@@ -20,8 +21,14 @@
   border-style: solid;
   border-width: 4px;
   border-color: #232323;
+
   margin-top: 150px;
-  margin-bottom: 110px;
+  margin-bottom: 100px;
+}
+.ttl_text p {
+  padding: 40px 0 40px 30px;
+  border-left: 4px solid #232323;
+  font-size: 20px;
 }
 .ttl_box {
   background-color: #fffe3e;
@@ -35,11 +42,6 @@
   max-width: 1000px;
 }
 
-.ttl_wrap p {
-  border-left: 3px solid #232323;
-  font-size: 20px;
-  padding: 23px 0 23px 44px;
-}
 .works {
   max-width: 1000px;
   margin: 0 auto;
@@ -49,20 +51,20 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.works h2 {
-  width: 76px;
-  position: absolute;
-  left: calc(50% + 500px);
-}
+
 .works_wrap li {
   width: 30%;
   height: 300px;
   margin-bottom: 100px;
 }
-.ttl img {
+.ttl,
+.ttl_wrap_w img {
   width: 218px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.ttl_sp {
+  display: none;
 }
 .ttl_left {
   border-left: 3px solid #232323;
@@ -72,11 +74,12 @@
 }
 .ttl_left p,
 .ttl_right p {
-  padding: 6px 6px 6px 6px;
+  padding: 5px 6px 5px 6px;
 }
 .ttl_right {
   font-size: 16px;
   font-weight: bold;
+  margin-left: 30px;
 }
 .text_wrap {
   max-width: 1000px;
@@ -86,10 +89,11 @@
   width: 80%;
   margin: 0 auto;
 }
-.text_wrap h1 {
+.text_wrap h3 {
   width: 188px;
   margin-top: 100px;
   margin-bottom: 50px;
+  padding-left: 20px;
 }
 .text_box {
   width: 8px;
@@ -101,15 +105,17 @@
   display: flex;
   margin-bottom: 6px;
   font-weight: bold;
+  padding-left: 40px;
 }
 .text_inner p {
   font-size: 16px;
   line-height: 1.6;
   margin-bottom: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 .works_img {
-  width: 100%;
-  padding-top: 90px;
+  padding: 90px 40px 0px 40px;
   margin-bottom: 100px;
   margin: 0 auto;
 }
@@ -134,7 +140,7 @@
   .sp_btn {
     display: block;
     position: absolute;
-    top: 20px;
+    top: 50px;
     right: 25px;
     height: 23px;
     cursor: pointer;
@@ -232,5 +238,91 @@
 @media screen and (max-width: 767px) {
   .pc_works {
     display: none;
+  }
+  .ttl_wrap,
+  .ttl_wrap_w,
+  .ttl_box {
+    border-width: 2px;
+    height: 60px;
+  }
+  .ttl_wrap {
+    width: 375px;
+    margin: 30px auto 50px;
+  }
+  .ttl_wrap img {
+    width: 145px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .text_wrap h3 {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    width: 130px;
+    padding-left: 40px;
+  }
+  .work_pc {
+    width: 145px;
+  }
+  .works_wrap {
+    display: block;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .ttl_wrap p {
+    font-size: 15px;
+    padding: 18px 0 18px 10px;
+    border-left: 2px solid #232323;
+  }
+  .works_wrap li {
+    width: 300px;
+    height: 300px;
+    padding-bottom: 50px;
+    margin: 0 auto;
+  }
+  .ttl_wrap_w {
+    margin: 50px 40px 30px 40px;
+  }
+  .ttl_wrap_w p {
+    display: none;
+  }
+  .ttl_wrap_w img {
+    width: 145px;
+    padding-left: 10px;
+  }
+  .ttl_sp {
+    display: flex;
+    margin: 0 auto;
+    margin-left: 40px;
+  }
+  .ttl_left {
+    border: none;
+    padding-left: 0px;
+  }
+  .ttl_sp p {
+    font-size: 13px;
+  }
+  .text_wrap {
+    padding-top: 50px;
+    margin: 0 auto;
+  }
+
+  .text_inner p {
+    font-size: 14px;
+  }
+  .dc_img {
+    display: block;
+  }
+  .img_pc {
+    margin: 0 auto;
+  }
+  .img_sp {
+    width: 100px;
+    padding-top: 50px;
+    margin: 0 auto;
+  }
+  .works_img {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin: 0px;
   }
 }
